# Project_game_QT

./: CMakeLists.txt  README.md  score.txt
src/: MainWindow.cpp  MainWindow.h  MenuWindows.cpp  MenuWindows.h  MyScene.cpp  MyScene.h  MySecondScene.cpp  MySecondScene.hpp  MyThirdScene.cpp  MyThirdScene.hpp  main.cpp  map_items.cpp  map_items.hpp
